[package]
name = "deno_specta"
description = "Rust ABI for custom Deno runtimes"
version = "1.0.0"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>", "Dominic DiGiacomo <dominic.m.digiacomo@gmail.com"]
edition = "2021"
rust-version = "1.57"
license = "MIT"
include = ["/src", "/LICENCE"]
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
abi = []
runtime = []

[dependencies]
specta = { git = "https://github.com/whymidnight/specta.git", features = ["functions"] }
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
heck = "0.4.1"
indoc = "2.0.0"

[dev-dependencies]
doc-comment = "0.3.3"
